fix over z-index

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -142,7 +142,7 @@
   border-bottom: 1px solid #f0f0f3;
   position: sticky;
   top: 0;
-  z-index: 999;
+  z-index: 8;
   background-color: white;
 }
 
